syntax = "proto3";

option csharp_namespace = "Orders.GrpcService";

package order;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";


service Order {
  rpc GetAll(google.protobuf.Empty) returns (stream OrderMessage);
  rpc GetAllBy(OrderRequest) returns (stream OrderMessage);
  rpc AddList(OrderAddRequest) returns (OrderAddResponse);
}

message OrderRequest {
  int64 warehouse_id = 1;
  int32 status_id = 2;
  google.protobuf.Timestamp creation_dt_start = 3;
  google.protobuf.Timestamp creation_dt_end = 4;
}

message OrderAddRequest {
    repeated OrderMessage data = 1;
}

message OrderMessage {
  string id = 1;
  Client client = 2;
  google.protobuf.Timestamp creation_dt = 3;
  google.protobuf.Timestamp issue_dt = 4;
  Status status = 5;
  repeated Item items = 6;
  Warehouse warehouse = 7;
}

message Client {
  int64 id = 1;
  string name = 2;
}

message Status {
  int32 id = 1;
  string  name = 2;
}

message Warehouse {
  int64 id = 1;
  string name = 2;
}

message Item {
  int64 item_id = 1;
  int32 count = 2;
}

message OrderAddResponse {
  int64 count = 1;
}